k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trimly-co-ke
  labels:
    app: trimly-co-ke
